--- a/app/src/main/res/layout/allproperty.xml
+++ b/app/src/main/res/layout/allproperty.xml
@@ -15,16 +15,19 @@
             android:scaleType="centerCrop"
             android:layout_height="match_parent"
             android:contentDescription="photo" />
-    <TextView
-        android:layout_margin="10dp"
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/proImage"
-        />
+
+        <TextView
+            android:id="@+id/title"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_toEndOf="@+id/proImage" />
     <TextView
         android:id="@+id/location"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
+        android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
@@ -32,6 +35,7 @@
         />
     <TextView
         android:id="@+id/amount"
+        android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/proImage"
