--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -22,11 +22,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <androidx.viewpager.widget.ViewPager
-                android:id="@+id/vpImage"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:contentDescription="Image of property" />
+<!--            <androidx.viewpager.widget.ViewPager-->
+<!--                android:id="@+id/vpImage"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="250dp"-->
+<!--                android:contentDescription="Image of property" />-->
+           <ImageView
+               android:layout_width="wrap_content"
+               android:layout_height="250dp"
+               android:id="@+id/vpImage"
+               />
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
