--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,31 +11,23 @@
         android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <FrameLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
-                android:background="@color/back"
-                />
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/searchView"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="30dp"
-                android:background="@color/white"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="@color/back" />
             <ImageView
+                android:layout_alignParentEnd="true"
                 android:id="@+id/ivMore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end|center_vertical"
+                android:layout_centerVertical="true"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="10dp"
                 android:backgroundTint="@color/icon"
@@ -44,9 +36,8 @@
                 android:focusable="true"
                 android:src="@drawable/more"
                 tools:ignore="TouchTargetSizeCheck" />
-        </FrameLayout>
+        </RelativeLayout>
     </com.google.android.material.appbar.AppBarLayout>
-
     <com.example.room.NoSwipePager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
