--- a/app/src/main/res/layout/property_item.xml
+++ b/app/src/main/res/layout/property_item.xml
@@ -112,12 +112,12 @@
             android:id="@+id/Amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:gravity="end"
             android:text="10000"
-            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/black"
-            />
+            android:textColor="@color/black" />
     </RelativeLayout>
 
 
