--- a/app/src/main/res/menu/toolbaritem.xml
+++ b/app/src/main/res/menu/toolbaritem.xml
@@ -6,5 +6,6 @@
         android:icon="@drawable/search"
         android:orderInCategory="1"
         android:title="Search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom"/>
 </menu>
